--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -25,6 +25,12 @@ textarea {
   white-space: pre-wrap;
 }
 
+.display {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+
 .time-block {
   text-align: center;
   border-radius: 15px;
@@ -38,23 +44,29 @@ textarea {
 
 .hour {
   background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  color: #275244;
+  border-top: 1px dashed #275244;
+  border-top-left-radius: 9px;
+  border-bottom-left-radius: 9px;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: #275244;
+  font-style: italic;
+  text-transform: capitalize;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  text-transform: capitalize;
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  text-transform: capitalize;
 }
 
 .saveBtn {
